<resources>
    <string name="app_name">Fiscal Code</string>
    <string name="label_surname">Cognome</string>
    <string name="label_name">Nome</string>
    <string name="label_birthdate">Data di nascita (AAAA-MM-GG)</string>
    <string name="label_sex">Sesso</string>
    <string name="label_male">M</string>
    <string name="label_female">F</string>
    <string name="label_birthplace">Comune di nascita (es. Naples)</string>
    <string name="button_compute">Calcola Codice Fiscale</string>
    <string name="hint_surname">Rossi</string>
    <string name="hint_name">Mario</string>
    <string name="hint_birthdate">1990-01-15</string>
    <string name="hint_birthplace">Naples</string>
</resources>